--- a/elements/crew-team-manager-finance/crew-team-manager-finance-list.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-list.html
@@ -145,6 +145,10 @@
 
             _updatePage(dataSplices) {
 
+                if (dataSplices === undefined) {
+                    return;
+                }
+
                 let page = 'message';
 
                 if (dataSplices) {
@@ -153,10 +157,8 @@
                     }
                 }
 
-                this.importLazyGroup(page).then(function (results) {
+                this.importLazyGroup(page).then(function () {
                     this._page = page;
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
                 }.bind(this));
 
             }
