--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-roster-list.html
@@ -16,11 +16,11 @@
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <link rel="import" href="../crew-team-manager-roster/crew-team-manager-roster-list-loading.html">
-<link rel="import" href="../crew-team-manager-roster/crew-team-manager-roster-list-results.html">
-<link rel="import" href="../crew-team-manager-roster/crew-team-manager-roster-list-message.html">
 
 
 <dom-module id="crew-team-manager-fleet-roster-list">
+    <link rel="lazy-import" group="results" href="../crew-team-manager-roster/crew-team-manager-roster-list-results.html">
+    <link rel="lazy-import" group="message" href="../crew-team-manager-roster/crew-team-manager-roster-list-message.html">
     <template>
         <style>
              :host {
@@ -91,7 +91,7 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerFleetRosterList extends Polymer.Element {
+        class crewTeamManagerFleetRosterList extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-fleet-roster-list'
@@ -126,6 +126,10 @@
 
             _updatePage(dataSplices) {
 
+                if (dataSplices === undefined) {
+                    return;
+                }
+
                 let page = 'message';
 
                 if (dataSplices) {
@@ -134,7 +138,9 @@
                     }
                 }
 
-                this._page = page;
+                this.importLazyGroup(page).then(function () {
+                    this._page = page;
+                }.bind(this));
 
             }
 
