--- a/elements/crew-team-manager-race/crew-team-manager-race-list.html
+++ b/elements/crew-team-manager-race/crew-team-manager-race-list.html
@@ -16,11 +16,11 @@
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <link rel="import" href="crew-team-manager-race-list-loading.html">
-<link rel="import" href="crew-team-manager-race-list-results.html">
-<link rel="import" href="crew-team-manager-race-list-message.html">
 
 
 <dom-module id="crew-team-manager-race-list">
+    <link rel="lazy-import" group="results" href="crew-team-manager-race-list-results.html">
+    <link rel="lazy-import" group="message" href="crew-team-manager-race-list-message.html">
     <template>
         <style>
              :host {
@@ -94,7 +94,7 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerRaceList extends Polymer.Element {
+        class crewTeamManagerRaceList extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-race-list'
@@ -146,6 +146,10 @@
 
             _updatePage(dataSplices) {
 
+                if (dataSplices === undefined) {
+                    return;
+                }
+
                 let page = 'message';
 
                 if (dataSplices) {
@@ -154,7 +158,9 @@
                     }
                 }
 
-                this._page = page;
+                this.importLazyGroup(page).then(function () {
+                    this._page = page;
+                }.bind(this));
 
             }
 
