--- a/elements/crew-team-manager-stage/crew-team-manager-stage.html
+++ b/elements/crew-team-manager-stage/crew-team-manager-stage.html
@@ -21,9 +21,6 @@
 
 <link rel="import" href="../crew-team-manager-team/crew-team-manager-team.html">
 
-<link rel="import" href="../crew-team-manager-fleet/crew-team-manager-fleet.html">
-
-
 <dom-module id="crew-team-manager-stage">
     <link rel="lazy-import" group="roster" href="../crew-team-manager-roster/crew-team-manager-roster.html">
     <link rel="lazy-import" group="picture" href="../crew-team-manager-picture/crew-team-manager-picture.html">
@@ -151,7 +148,7 @@
                 return {
                     _page: {
                         type: String,
-                        value: 'fleet'
+                        value: 'team'
                     },
                     _wideLayout: {
                         type: Boolean,
