--- a/elements/crew-team-manager-team/crew-team-manager-team-detail.html
+++ b/elements/crew-team-manager-team/crew-team-manager-team-detail.html
@@ -15,11 +15,11 @@
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <link rel="import" href="crew-team-manager-team-detail-loading.html">
-<link rel="import" href="crew-team-manager-team-detail-results.html">
-<link rel="import" href="crew-team-manager-team-detail-message.html">
 
 
 <dom-module id="crew-team-manager-team-detail">
+    <link rel="lazy-import" group="results" href="crew-team-manager-team-detail-results.html">
+    <link rel="lazy-import" group="message" href="crew-team-manager-team-detail-message.html">
     <template>
         <style>
              :host {
@@ -86,7 +86,7 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerTeamDetail extends Polymer.Element {
+        class crewTeamManagerTeamDetail extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-team-detail'
@@ -120,6 +120,11 @@
             }
 
             _updatePage(team) {
+
+                if (team === undefined) {
+                    return;
+                }
+
                 let page = 'message';
 
                 if (team) {
@@ -127,7 +132,9 @@
 
                 }
 
-                this._page = page;
+                this.importLazyGroup(page).then(function () {
+                    this._page = page;
+                }.bind(this));
             }
 
             _handleActionLogout() {
