--- a/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-detail.html
@@ -134,10 +134,8 @@
 
                 }
 
-                this.importLazyGroup(page).then(function (results) {
+                this.importLazyGroup(page).then(function () {
                     this._page = page;
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
                 }.bind(this));
             }
 
@@ -151,6 +149,7 @@
             }
 
             _handleActionEdit(e) {
+                console.log(this.$)
                 this.dispatchEvent(new CustomEvent(crewTeamManagerErgDetail.is + '-action-edit', {
                     bubbles: true,
                     composed: true,
