--- a/elements/crew-team-manager-erg/crew-team-manager-erg-list.html
+++ b/elements/crew-team-manager-erg/crew-team-manager-erg-list.html
@@ -147,6 +147,10 @@
 
             _updatePage(dataSplices) {
 
+                if (dataSplices === undefined) {
+                    return;
+                }
+
                 let page = 'message';
 
                 if (dataSplices) {
@@ -154,10 +158,9 @@
                         page = 'results';
                     }
                 }
-                this.importLazyGroup(page).then(function (results) {
+
+                this.importLazyGroup(page).then(function () {
                     this._page = page;
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
                 }.bind(this));
 
             }
