--- a/elements/crew-team-manager-finance/crew-team-manager-finance.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance.html
@@ -106,18 +106,14 @@
 
             _handleActionDetail(e) {
                 this._finance = e.detail.finance;
-                this.importLazyGroup('detail').then(function (results) {
+                this.importLazyGroup('detail').then(function () {
                     this._page = 'detail';
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
                 }.bind(this));
             }
 
             _handleActionCreate(e) {
-                this.importLazyGroup('create').then(function (results) {
+                this.importLazyGroup('create').then(function () {
                     this._page = 'create';
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
                 }.bind(this));
             }
 
@@ -126,29 +122,23 @@
             }
 
             _handleActionBackOnce(e) {
-                this.importLazyGroup('detail').then(function (results) {
+                this.importLazyGroup('detail').then(function () {
                     this._page = 'detail';
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
                 }.bind(this));
             }
 
             _handleActionEdit(e) {
 
                 this._edit = e.detail.finance;
-                this.importLazyGroup('edit').then(function (results) {
+                this.importLazyGroup('edit').then(function () {
                     this._page = 'edit';
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
                 }.bind(this));
 
             }
 
             _handleActionSaved(e) {
-                this.importLazyGroup('detail').then(function (results) {
+                this.importLazyGroup('detail').then(function () {
                     this._page = 'detail';
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
                 }.bind(this));
                 this._toast = 'Finance Saved';
                 this.$.toast.fitInto = this.$.pages;
@@ -163,10 +153,8 @@
             }
 
             _handleActionCreated(e) {
-                this.importLazyGroup('detail').then(function (results) {
+                this.importLazyGroup('detail').then(function () {
                     this._page = 'detail';
-                    this._toggleDrawer();
-                    this.dispatchEvent(new CustomEvent('import-loaded', results));
                 }.bind(this));
                 this._toast = 'Finance Saved';
                 this._finance = e.detail.finance;
