--- a/elements/crew-team-manager-oar/crew-team-manager-oar.html
+++ b/elements/crew-team-manager-oar/crew-team-manager-oar.html
@@ -11,12 +11,12 @@
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <link rel="import" href="crew-team-manager-oar-list.html">
-<link rel="import" href="crew-team-manager-oar-detail.html">
-<link rel="import" href="crew-team-manager-oar-edit.html">
-<link rel="import" href="crew-team-manager-oar-create.html">
 
 
 <dom-module id="crew-team-manager-oar">
+    <link rel="lazy-import" group=detail "" href="crew-team-manager-oar-detail.html">
+    <link rel="lazy-import" group="edit" href="crew-team-manager-oar-edit.html">
+    <link rel="lazy-import" group="create" href="crew-team-manager-oar-create.html">
     <template>
         <style>
              :host {
@@ -70,7 +70,7 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerOar extends Polymer.Element {
+        class crewTeamManagerOar extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-oar'
@@ -106,11 +106,15 @@
 
             _handleActionDetail(e) {
                 this._oar = e.detail.oar;
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
             }
 
             _handleActionCreate(e) {
-                this._page = 'create';
+                this.importLazyGroup('create').then(function () {
+                    this._page = 'create';
+                }.bind(this));
             }
 
             _handleActionBack(e) {
@@ -118,18 +122,24 @@
             }
 
             _handleActionBackOnce(e) {
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
             }
 
             _handleActionEdit(e) {
 
                 this._edit = e.detail.oar;
-                this._page = 'edit';
+                this.importLazyGroup('edit').then(function () {
+                    this._page = 'edit';
+                }.bind(this));
 
             }
 
             _handleActionSaved(e) {
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
                 this._toast = 'Oar Saved';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
@@ -143,7 +153,9 @@
             }
 
             _handleActionCreated(e) {
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
                 this._toast = 'Oar Saved';
                 this._oar = e.detail.oar;
                 this.$.toast.fitInto = this.$.pages;
