--- a/elements/crew-team-manager-roster/crew-team-manager-roster.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster.html
@@ -11,12 +11,12 @@
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <link rel="import" href="crew-team-manager-roster-list.html">
-<link rel="import" href="crew-team-manager-roster-detail.html">
-<link rel="import" href="crew-team-manager-roster-edit.html">
-<link rel="import" href="crew-team-manager-roster-create.html">
 
 
 <dom-module id="crew-team-manager-roster">
+    <link rel="lazy-import" group="detail" href="crew-team-manager-roster-detail.html">
+    <link rel="lazy-import" group="edit" href="crew-team-manager-roster-edit.html">
+    <link rel="lazy-import" group="create" href="crew-team-manager-roster-create.html">
     <template>
         <style>
              :host {
@@ -70,7 +70,7 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerRoster extends Polymer.Element {
+        class crewTeamManagerRoster extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-roster'
@@ -106,7 +106,9 @@
 
             _handleActionDetail(e) {
                 this._athlete = e.detail.athlete;
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
             }
 
             _handleActionBack(e) {
@@ -114,18 +116,24 @@
             }
 
             _handleActionBackOnce(e) {
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
             }
 
             _handleActionEdit(e) {
 
                 this._edit = e.detail.athlete;
-                this._page = 'edit';
+                this.importLazyGroup('edit').then(function () {
+                    this._page = 'edit';
+                }.bind(this));
 
             }
 
             _handleActionCreated(e) {
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
                 this._toast = 'Athlete Created';
                 this._athlete = e.detail.athlete;
                 this.$.toast.fitInto = this.$.pages;
@@ -133,14 +141,18 @@
             }
 
             _handleActionSaved(e) {
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
                 this._toast = 'Athlete Saved';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
             }
 
             _handleActionCreate(e) {
-                this._page = 'create';
+                this.importLazyGroup('create').then(function () {
+                    this._page = 'create';
+                }.bind(this));
             }
 
             _handleActionCancel(e) {
@@ -157,8 +169,6 @@
                 this.$.toast.open();
             }
         }
-
-
 
         // Register custom element definition using standard platform API
         customElements.define(crewTeamManagerRoster.is, crewTeamManagerRoster);
