--- a/elements/crew-team-manager-schedule/crew-team-manager-schedule.html
+++ b/elements/crew-team-manager-schedule/crew-team-manager-schedule.html
@@ -11,12 +11,12 @@
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
 <link rel="import" href="crew-team-manager-schedule-list.html">
-<link rel="import" href="crew-team-manager-schedule-detail.html">
-<link rel="import" href="crew-team-manager-schedule-edit.html">
-<link rel="import" href="crew-team-manager-schedule-create.html">
 
 
 <dom-module id="crew-team-manager-schedule">
+    <link rel="lazy-import" group="detail" href="crew-team-manager-schedule-detail.html">
+    <link rel="lazy-import" group="edit" href="crew-team-manager-schedule-edit.html">
+    <link rel="lazy-import" group="create" href="crew-team-manager-schedule-create.html">
     <template>
         <style>
              :host {
@@ -70,7 +70,7 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerSchedule extends Polymer.Element {
+        class crewTeamManagerSchedule extends Polymer.LazyImportsMixin(Polymer.Element) {
 
             static get is() {
                 return 'crew-team-manager-schedule'
@@ -106,11 +106,15 @@
 
             _handleActionDetail(e) {
                 this._regatta = e.detail.regatta;
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
             }
 
             _handleActionCreate(e) {
-                this._page = 'create';
+                this.importLazyGroup('create').then(function () {
+                    this._page = 'create';
+                }.bind(this));
             }
 
             _handleActionBack(e) {
@@ -118,25 +122,33 @@
             }
 
             _handleActionBackOnce(e) {
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
             }
 
             _handleActionEdit(e) {
 
                 this._edit = e.detail.regatta;
-                this._page = 'edit';
+                this.importLazyGroup('edit').then(function () {
+                    this._page = 'edit';
+                }.bind(this));
 
             }
 
             _handleActionSaved(e) {
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
                 this._toast = 'Regatta Saved';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
             }
 
             _handleActionCreated(e) {
-                this._page = 'detail';
+                this.importLazyGroup('detail').then(function () {
+                    this._page = 'detail';
+                }.bind(this));
                 this._regatta = e.detail.regatta;
                 this._toast = 'Regatta Saved';
                 this.$.toast.fitInto = this.$.pages;
